# Simulacion-TP12

./: .gitignore  README.md  logging_config.py  model.py  pyproject.toml
plots/: plot_0.txt
