[tool.poetry]
name = "simulacion-tp12"
version = "0.1.0"
description = ""
authors = ["ramiro-luengo <ramirobmds@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
